# Python_DRF_test

./: .env  pyproject.toml
apps/advertisement/: apps.py  filter.py  managers.py  models.py  serializers.py  urls.py  views.py
apps/advertisement/migrations/: 0001_initial.py  0002_advertisementmodel_profile.py
apps/users/: managers.py  models.py  serializers.py  urls.py  views.py
apps/users/choices/: account_type_choices.py
apps/users/migrations/: 0001_initial.py  0002_initial.py
configs/: settings.py  urls.py
core/dataclasses/: user_dataclass.py
core/permissions/: is_seller.py
core/services/: file_service.py
templates/: check.html
